@@ -1,3 +1,8 @@
+2005-02-28  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinX.c (GenerateXEvent): correct %A translation on
+	MouseWheel [Bug 1118340]
+
 2005-02-24  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSX.h: fixed incorrect inclusion of internal header.
